examples/stun-setters/crashers/43eb31a6590debc599d5839bb8a55afa80e49201.output
panic: runtime error: slice bounds out of range

goroutine 1 [running]:
github.com/go-rtc/stun.(*XORMappedAddress).GetFromAs(0xc42000c900, 0xc420018320, 0x20, 0xc42001a3d8, 0xc420018338)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/xoraddr.go:111 +0x2ae
github.com/go-rtc/stun.(*XORMappedAddress).GetFrom(0xc42000c900, 0xc420018320, 0x7f73bf9e2001, 0x2)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/xoraddr.go:137 +0x3c
github.com/go-rtc/stun.FuzzSetters(0x7f73bf9e2000, 0x3, 0x200000, 0x3)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/fuzz.go:97 +0x33c
go-fuzz-dep.Main(0x517548)
	/tmp/go-fuzz-build843731397/goroot/src/go-fuzz-dep/main.go:49 +0xde
main.main()
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/go.fuzz.main/main.go:10 +0x2d

goroutine 17 [syscall, locked to thread]:
runtime.goexit()
	/tmp/go-fuzz-build843731397/goroot/src/runtime/asm_amd64.s:2197 +0x1
exit status 2